compiler/tests/success/test_type_eq.jazz
param int n = 1;

inline
fn f(reg u64[n] x) -> reg u64[n] { return x; }
fn g() {
reg u64[n] a;
reg u64[n] b;
a = b;
}
