compiler/tests/fail/param_expansion/x86-64/operator_res.jazz
param int N = 2;

inline fn f () -> reg u64[N&N] {
  reg u64[N&N] a;
  return a;
}
